--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -57,6 +57,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\DomofonContext.cs" />
+    <Compile Include="Forms\ChooseSub.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ChooseSub.Designer.cs">
+      <DependentUpon>ChooseSub.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
