--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -64,11 +64,11 @@
     <Compile Include="Forms\AdressForm.Designer.cs">
       <DependentUpon>AdressForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\ChooseSub.cs">
+    <Compile Include="Forms\SubscriberForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\ChooseSub.Designer.cs">
-      <DependentUpon>ChooseSub.cs</DependentUpon>
+    <Compile Include="Forms\SubscriberForm.Designer.cs">
+      <DependentUpon>SubscriberForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
@@ -94,6 +94,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SubscriberForm.resx">
+      <DependentUpon>SubscriberForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
