--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -76,6 +76,12 @@
     <Compile Include="Forms\Key_Handset_Domofon_Form.Designer.cs">
       <DependentUpon>Key_Handset_Domofon_Form.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\PaymentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\PaymentForm.Designer.cs">
+      <DependentUpon>PaymentForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ServicemanForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,6 +124,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Key_Handset_Domofon_Form.resx">
       <DependentUpon>Key_Handset_Domofon_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\PaymentForm.resx">
+      <DependentUpon>PaymentForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ServicemanForm.resx">
       <DependentUpon>ServicemanForm.cs</DependentUpon>
