--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -58,11 +58,11 @@
   <ItemGroup>
     <Compile Include="Controller\DomofonContext.cs" />
     <Compile Include="Controller\Methods.cs" />
-    <Compile Include="Forms\AdressForm.cs">
+    <Compile Include="Forms\AddressForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\AdressForm.Designer.cs">
-      <DependentUpon>AdressForm.cs</DependentUpon>
+    <Compile Include="Forms\AddressForm.Designer.cs">
+      <DependentUpon>AddressForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\CompanyForm.cs">
       <SubType>Form</SubType>
@@ -107,7 +107,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Accrual.cs" />
-    <Compile Include="Models\Adress.cs" />
+    <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Company.cs" />
     <Compile Include="Models\DomofonHandset.cs" />
     <Compile Include="Models\DomofonKey.cs" />
@@ -119,8 +119,8 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Forms\AdressForm.resx">
-      <DependentUpon>AdressForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\AddressForm.resx">
+      <DependentUpon>AddressForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\CompanyForm.resx">
       <DependentUpon>CompanyForm.cs</DependentUpon>
